--- a/Continuous_Control_Solution.ipynb
+++ b/Continuous_Control_Solution.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Continuous Control\n",
+    "# Continuous Control Solution\n",
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
+    "This notebook contains my solution to the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing the necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "Begin by importing the necessary packages and starting the reacher environment."
    ]
   },
   {
@@ -66,6 +66,15 @@
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "env = UnityEnvironment(file_name='Reacher_Windows_x86_64/Reacher.exe')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Train the Agent\n",
+    "\n",
+    "The play_reacher() fuction trains a single agent to act in the environment using DDPG."
    ]
   },
   {
